Fixed bug #70012 (Exception lost with nested finally block)